style(html, css): add beige colour background to portfolio section

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,10 @@ div.down-arrow i {
 
 /* --- PORTFOLIO --- */
 
+section.portfolio {
+    background-color: #fcfcf6;
+}
+
 div.portfolio-snippets {
     display: flex;
     flex-direction: row;
