--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,32 @@ section.projects > div.container div.row figure figcaption h6 {
     padding: 0.5em 0.25em 0.5em 1.5em;
 }
 
+/* --- PROJECT POSTS --- */
+
+section.portfolio-posts div.row div.collection-post-text {
+    margin: 1.5em 0.75em;
+}
+
+section.portfolio-posts div.row div.collection-post-text h3 {
+    margin-bottom: 0.25em;
+}
+
+section.portfolio-posts div.row div.collection-post-text h3 > a:hover {
+    text-decoration: none;
+    border-bottom: 1px dashed #000;
+}
+
+section.portfolio-posts div.row div h3 > a {
+    color: #000;
+}
+
+section.portfolio-posts > div.row > div.col-sm-12 > h6 {
+    font-weight: 700;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 1.5em auto;
+}
+
 /* --- SECTION FUNDRAISING --- */
 
 section.fundraising div.row {
@@ -530,6 +556,13 @@ div.social-media div > h5 {
     div.nav-flexbox ul.flex-nav-2 li:last-child {
         margin-right: 0;
     }
+
+    /* --- COLLECTION POST--- */
+
+    div.post-md-hidden {
+        display: none;
+        overflow: hidden;
+    }
 }
 
 /* --- Large --- */
@@ -537,6 +570,11 @@ div.social-media div > h5 {
 @media (min-width: 992px) {
     section.fundraising div.row div.border-right {
         border-right: 1px solid #000;
+    }
+
+    div.post-md-hidden {
+        display: inline-block;
+        overflow: visible;
     }
     
 }
