--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,18 @@ div.portfolio-snippets > a {
     color: #000;
 }
 
+section.portfolio > div.myAcc div.row div > a {
+    color: #000;
+    text-decoration: none;
+    border-bottom: 1px solid #fcfcf6;
+}
+
+section.portfolio > div.myAcc div.row div > a:hover {
+    border-bottom: 1px dashed #000;
+    text-decoration: none;
+    padding-bottom: 0;
+}
+
 /* --- PORTFOLIO SNIPPETS --- */
 
 div.card div > div.card-block {
@@ -335,7 +347,7 @@ section.bibliography > div.myAcc div.card-header a h6 {
 }
 
 section.bibliography > div.myAcc div.card-header + div p {
-    margin-bottom: 0.05;
+    margin-bottom: 0;
 }
 
 section.bibliography > div.myAcc div.card-header a:hover h6 {
@@ -651,11 +663,11 @@ div.social-media div > h5 {
     }
 
     section.bibliography > div.myAcc div.card-header a h6 {
-        text-align: left;
+        text-align: center;
     }
 
     section.bibliography > div.myAcc > div.row h5 {
-        text-align: left;
+        text-align: center;
     }
     
 }
