--- a/css/style.css
+++ b/css/style.css
@@ -473,6 +473,52 @@ img.img-circle {
     border-radius: 50%;
 }
 
+/* --- BLOG SECTION --- */
+
+section.collection-section span.blog-title-border {
+    display: block;
+    width: 100%;
+    max-width: 1.5em;
+    margin: 0.25em auto 1.25em auto;
+    border-top: 2px solid #000;
+}
+
+/* --- BLOG POSTS --- */
+
+section.blog-posts {
+    background-color: #fcfcf6;
+}
+
+section.blog-posts div.row {
+    margin-top: 3em;
+}
+
+section.blog-posts div.row div.col-sm-12 {
+    display: block;
+    text-align: center;
+}
+
+section.blog-posts div.row div.col-sm-12 h3 {
+    margin-bottom: 1.5em;
+}
+
+section.blog-posts div.row div.col-sm-12 h6.blog-post-date {
+    padding-top: 0.25em;
+}
+
+section.blog-posts div.row div.col-sm-12 h6 {
+    font-weight: 700;
+    text-transform: uppercase;
+    padding-bottom: 0.25em 0;
+}
+
+section.blog-posts div.row div.col-sm-12 > img {
+    border-radius: 50%;
+    width: 100%;
+    max-width: 8em;
+    margin: 0.75em 0;
+}
+
 /* --- FOOTER --- */
 
 footer {
